--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,7 @@
     "prop-types": "15.8.1",
     "react": "18.3.0-canary-035a41c4e-20230704",
     "react-dom": "18.3.0-canary-035a41c4e-20230704",
-    "react-markdown": "^8.0.3"
+    "react-markdown": "8.0.7"
   },
   "devDependencies": {
     "@redwoodjs/vite": "7.0.0-canary.283",
