--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -3,32 +3,18 @@
     "noEmit": true,
     "allowJs": true,
     "esModuleInterop": true,
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
+    "target": "ES2023",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "baseUrl": "./",
     "paths": {
-      "$api/*": [
-        "../api/*",
-      ],
-      "api/*": [
-        "../api/*",
-      ],
-      "$web/*": [
-        "../web/*",
-      ],
-      "web/*": [
-        "../web/*",
-      ],
-      "$web/src/*": [
-        "../web/src/*",
-        "../.redwood/types/mirror/web/src/*"
-      ],
-      "web/src/*": [
-        "../web/src/*",
-        "../.redwood/types/mirror/web/src/*"
-      ],
-      "types/*": ["../types/*", "../web/types/*", "../api/types/*"],
+      "$api/*": ["../api/*"],
+      "api/*": ["../api/*"],
+      "$web/*": ["../web/*"],
+      "web/*": ["../web/*"],
+      "$web/src/*": ["../web/src/*", "../.redwood/types/mirror/web/src/*"],
+      "web/src/*": ["../web/src/*", "../.redwood/types/mirror/web/src/*"],
+      "types/*": ["../types/*", "../web/types/*", "../api/types/*"]
     },
     "typeRoots": ["../node_modules/@types"],
     "jsx": "preserve"
