--- a/web/package.json
+++ b/web/package.json
@@ -13,18 +13,18 @@
     ]
   },
   "dependencies": {
-    "@redwoodjs/auth": "7.7.4",
-    "@redwoodjs/auth-dbauth-web": "7.7.4",
-    "@redwoodjs/forms": "7.7.4",
-    "@redwoodjs/router": "7.7.4",
-    "@redwoodjs/web": "7.7.4",
+    "@redwoodjs/auth": "8.1.1",
+    "@redwoodjs/auth-dbauth-web": "8.1.1",
+    "@redwoodjs/forms": "8.1.1",
+    "@redwoodjs/router": "8.1.1",
+    "@redwoodjs/web": "8.1.1",
     "prop-types": "15.8.1",
-    "react": "18.3.0-canary-035a41c4e-20230704",
-    "react-dom": "18.3.0-canary-035a41c4e-20230704",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-markdown": "8.0.7"
   },
   "devDependencies": {
-    "@redwoodjs/vite": "7.7.4",
+    "@redwoodjs/vite": "8.1.1",
     "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.16",
