--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@redwoodjs/forms": "8.1.1",
     "@redwoodjs/router": "8.1.1",
     "@redwoodjs/web": "8.1.1",
+    "humanize-string": "2.1.0",
     "prop-types": "15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
