--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@redwoodjs/api": "8.1.1",
     "@redwoodjs/auth-dbauth-api": "8.1.1",
-    "@redwoodjs/graphql-server": "8.1.1"
+    "@redwoodjs/graphql-server": "8.1.1",
+    "@redwoodjs/storage": "8.1.1"
   }
 }
