--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "prop-types": "15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-markdown": "8.0.7"
   },
   "devDependencies": {
